Bug 476666 - Widgets based on System Monitor Sensor are all broken out of the box
Summary: Widgets based on System Monitor Sensor are all broken out of the box
Status: RESOLVED FIXED
Alias: None
Product: plasmashell
Classification: Plasma
Component: System Monitor widgets (other bugs)
Version First Reported In: master
Platform: Neon Linux
: NOR major
Target Milestone: 1.0
Assignee: Plasma Bugs List
URL:
Keywords: qt6
: 475794 476751 (view as bug list)
Depends on:
Blocks:
 
Reported: 2023-11-07 12:02 UTC by Patrick Silva
Modified: 2023-11-29 13:57 UTC (History)
6 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Patrick Silva 2023-11-07 12:02:00 UTC
STEPS TO REPRODUCE
1. open the Widget Explorer
2. add the Disk Usage widget to desktop
3. 

OBSERVED RESULT
the widget is empty

EXPECTED RESULT
the widget shows the disk usage

SOFTWARE/OS VERSIONS
Operating System: KDE neon Unstable Edition
KDE Plasma Version: 5.27.80
KDE Frameworks Version: 5.240.0
Qt Version: 6.6.0
Graphics Platform: Wayland
Comment 1 Nate Graham 2023-11-08 21:15:06 UTC
Can reproduce.
Comment 2 Nate Graham 2023-11-08 21:15:31 UTC
Possibly related journal warnings:

Nov 08 14:14:46 Liberator plasmashell[94978]: file:///home/nate/kde/usr6/share/plasma/plasmoids/org.kde.plasma.systemmonitor/contents/ui/main.qml:46: TypeError: Cannot read property 'updateRateLimit' of null
Nov 08 14:14:46 Liberator plasmashell[94978]: file:///home/nate/kde/usr6/share/plasma/plasmoids/org.kde.plasma.systemmonitor/contents/ui/main.qml:45: TypeError: Cannot read property 'totalSensors' of null
Nov 08 14:14:46 Liberator plasmashell[94978]: file:///home/nate/kde/usr6/share/plasma/plasmoids/org.kde.plasma.systemmonitor/contents/ui/main.qml:41: TypeError: Cannot read property 'highPrioritySensorIds' of null
Nov 08 14:14:46 Liberator plasmashell[94978]: file:///home/nate/kde/usr6/share/plasma/plasmoids/org.kde.plasma.systemmonitor/contents/ui/main.qml:33: TypeError: Cannot read property 'title' of null
Nov 08 14:14:46 Liberator plasmashell[94978]: file:///home/nate/kde/usr6/share/plasma/plasmoids/org.kde.plasma.systemmonitor/contents/ui/main.qml:46: TypeError: Cannot read property 'updateRateLimit' of null
Nov 08 14:14:46 Liberator plasmashell[94978]: file:///home/nate/kde/usr6/share/plasma/plasmoids/org.kde.plasma.systemmonitor/contents/ui/main.qml:45: TypeError: Cannot read property 'totalSensors' of null
Nov 08 14:14:46 Liberator plasmashell[94978]: file:///home/nate/kde/usr6/share/plasma/plasmoids/org.kde.plasma.systemmonitor/contents/ui/main.qml:41: TypeError: Cannot read property 'highPrioritySensorIds' of null
Nov 08 14:14:46 Liberator plasmashell[94978]: file:///home/nate/kde/usr6/share/plasma/plasmoids/org.kde.plasma.systemmonitor/contents/ui/main.qml:33: TypeError: Cannot read property 'title' of null
Comment 3 Nate Graham 2023-11-09 20:08:52 UTC
*** Bug 476751 has been marked as a duplicate of this bug. ***
Comment 4 Prajna Sariputra 2023-11-19 14:56:12 UTC
*** Bug 475794 has been marked as a duplicate of this bug. ***
Comment 5 Arjen Hiemstra 2023-11-29 13:57:19 UTC
Git commit 6ba616781cbbfe09d6e85d22536cccf92c9393fa by Arjen Hiemstra.
Committed on 29/11/2023 at 14:15.
Pushed by ahiemstra into branch 'master'.

applets/systemmonitor: Drop "pending startup preset"

It's unclear what the purpose of this code was. At this point, it's
causing issues because the list of arguments passed to the applet
changed and we are now trying to load a preset matching the applet ID.
Removing this seems to fix things without anything else breaking.

M  +5    -17   applets/systemmonitor/systemmonitor/systemmonitor.cpp
M  +0    -1    applets/systemmonitor/systemmonitor/systemmonitor.h

https://invent.kde.org/plasma/plasma-workspace/-/commit/6ba616781cbbfe09d6e85d22536cccf92c9393fa