applets/systemmonitor: Drop "pending startup preset"

It's unclear what the purpose of this code was. At this point, it's
causing issues because the list of arguments passed to the applet
changed and we are now trying to load a preset matching the applet ID.
Removing this seems to fix things without anything else breaking.

BUG: 476666